2003-02-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSSlideView.h
	* Source/GSSlideView.m
	Moved over from X11 backend.
	* Source/GNUmakefile
	Added new file GSSlideView.m.
	* Source/GSDisplayServer.m
	Use GSSlideView to implement image sliding.

2003-02-11 17:53  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSScrollView.m (-setBorderType:): Call -tile to make
	the change visible.

	* Source/NSBrowser.m (-_createColumn): Set the border of the created
	scroll view explicitly.

2003-02-11 16:33  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSAttributedString.m (-fixAttachmentAttributeInRange:):
	Update end index when a character is deleted.

	* Source/NSTextStorage.m (-processEditing): Make sure we always
	give a valid range and delta to the layout managers.

	* Source/NSTextView.m (-setSelectedRange:affinity:stillSelecting:):
	Clamp the selected range to the text storage's length.

2003-02-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBrowser.m: Rewrote and documented the ([-setPath:]) method
	to fix the distinction between absolute and relative paths and to
	improve performance somewhat.

2003-02-10 15:14  Alexander Malmberg <alexander@malmberg.org>

	Based on patches from Jeff Teunissen:

	* Source/NSWindow.m (GSAllWindows): Check that windowmaps isn't
	NULL before calling NSAllMapTableValues.

	* Source/NSScroller.m: Change size check so the knob and arrows are
	visible until there's absolutely no space left for them. Draw the
	knob slot with the window's background color when the knob isn't
	visible for consistency with OPENSTEP.

	* Source/NSApplication.m (-setApplicationIconImage:): Update all
	windows that have the old app icon as their mini window image so they
	use the new app icon.

2003-02-10 15:09  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m, Source/NSLayoutManager.m,
	Source/NSTextView.m: Many minor bug and behavior fixes to get the