@@ -1,3 +1,8 @@
+2003-02-13 00:52  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:):
+	Implement basic handling of tabs.
+
 2003-02-12  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/GSSlideView.h
